Add JWT role-based authorization and fix registration role mapping