@@ -1,8 +1,13 @@
 package com.userloginapp.User.security;
 
 import com.userloginapp.User.entity.UserEntity;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+
+import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -28,9 +33,13 @@ public class CustomUserDetails implements UserDetails {
     }
 
     @Override
-    public java.util.Collection getAuthorities() {
-        return Collections.emptyList(); // no roles now
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_" + user.getRole())
+        );
     }
+
+
 
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
